[package]
name = "example-prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
gloo = { path = "../..", features = ["futures"] }
primes = "0.3.0"
wasm-bindgen-futures = "0.4.33"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.147", features = ["derive"] }
