[package]
name = "todomvc"
version = "0.1.0"
authors = ["Rust and WebAssembly Working Group"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = { path = "../..", features = ["futures"] }
wasm-bindgen = "0.2.54"
wasm-bindgen-futures = "0.4.4"
futures-util = "0.3"
console_error_panic_hook = "0.1.6"
futures-signals = { version = "0.3.24", features = ["serde"] }
dominator = { version = "0.5.26", package = "dominator2", features = ["smartstring"] }
serde = { version = "1", features = ["derive", "rc"] }
smartstring = { version = "1", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
serde_json = "1.0.79"
discard = "1.0.4"
serde-wasm-bindgen = "0.4.2"
futures = "0.3.21"

[dependencies.web-sys]
version = "0.3.19"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "Node",
]

[workspace]
