[package]
authors = ["The RustWasm Developers"]
description = "An example WebExtension built with gloo"
license = "Apache-2.0/MIT"
name = "webextension-demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.37"
gloo-webextensions = { path = "../../crates/webextensions" }
js-sys = "0.3.17"

[dependencies.web-sys]
version = "0.3.17"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlButtonElement",
  "HtmlInputElement",
  "Window",
]
